<resources>
    <string name="app_name">Task Scheduler</string>
    <string name="signin_with_google">SignIn with Google</string>
    <string name="web_client_id">841738029172-1iqqtf8oaqsenc4mmglvsb73q38s1cb8.apps.googleusercontent.com</string>
    <string name="signout">SignOut</string>
    <string name="task">Task</string>
    <string name="details">Details</string>
    <string name="_0_0_pm">0:0 pm</string>
    <string name="_11_10_2001">11-10-2001</string>
    <string name="add_task">add task</string>
    <string name="user_name">User Name</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="account">Account</string>
    <string name="documentations">Documentations</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="enter_date">Enter date</string>
    <string name="add">Add</string>
    <string name="new_task">NEW TASK</string>
    <string name="action_switch_layout">Action_switch_layout</string>
    <string name="settings_">SETTINGS</string>
    <string name="delete_account">Delete account</string>
    <string name="clear_tasks">CLEAR TASKS</string>
    <string name="once_you_clear_all_tasks_all_the_tasks_registered_will_be_removed_and_there_is_no_going_back_please_be_certain">Once you clear all tasks, all the tasks registered will be removed and there is no going back. Please be certain.</string>
    <string name="clear_all_tasks">Clear all tasks</string>
    <string name="once_you_delete_this_account_all_the_tasks_registered_will_be_deleted_and_there_is_no_going_back_please_be_certain">Once you delete this account, all the tasks registered will be deleted and there is no going back. Please be certain.</string>
    <string name="welcome_image">Welcome image</string>
    <string name="time_picker">Time picker</string>
    <string name="profile_image">Profile image</string>
    <string name="delete_task">Delete task</string>
    <string name="date_and_time">Date and time</string>
</resources>