<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/signOut"
                android:icon="@drawable/logout"
                android:title="@string/signout" />
        </menu>
    </item>
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/baseline_settings_24"
                android:title="@string/settings" />
        </menu>
    </item>
    <item android:title="@string/documentations">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/baseline_about_24"
                android:title="@string/about" />
            <item
                android:id="@+id/doc"
                android:icon="@drawable/baseline_documentations_24"
                android:title="@string/documentations" />
        </menu>
    </item>
    <item android:title="@string/exit">
        <menu>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/exit_24"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>