<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/md_theme_light_surfaceTint"
            android:padding="4dp"
            android:text="@string/settings_"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="2dp"
            android:orientation="vertical"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/enter_date"
                    android:src="@drawable/clear_all" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/clear_all_tasks" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/once_you_clear_all_tasks_all_the_tasks_registered_will_be_removed_and_there_is_no_going_back_please_be_certain"
                android:textSize="11sp" />

            <Button
                android:id="@+id/clear_all_tasks"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/clear_tasks"
                android:textColor="@color/md_theme_dark_secondaryContainer"
                app:cornerRadius="0dp"
                app:strokeColor="@color/md_theme_light_outlineVariant" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>