<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_task"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/md_theme_light_surfaceVariant"
            app:cardCornerRadius="8dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                android:layout_marginVertical="@dimen/card_vertical_margin"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/what_would_you_like_to_do"
                    app:endIconDrawable="@drawable/close_box"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="40" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_details"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/details"
                    app:endIconDrawable="@drawable/close_box"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="4000" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clickable_min_size"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/md_theme_light_surfaceVariant"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                android:layout_marginVertical="@dimen/card_vertical_margin"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/date_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_11_10_2001" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/enter_date"
                    android:src="@drawable/calendar_edit_outline" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clickable_min_size"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/md_theme_light_surfaceVariant"
            android:clickable="true"
            app:cardCornerRadius="8dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                android:layout_marginVertical="@dimen/card_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0_0_pm" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/time_picker"
                    android:src="@drawable/timer_edit_outline" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/add" />

    </LinearLayout>

</androidx.cardview.widget.CardView>